--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,8 @@ project(libalgo VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
 
 list(APPEND SRCS src/IntervalTree.cpp)
-list(APPEND SRCS src/SetOnSplayTree.cpp)
-list(APPEND SRCS src/UkkonensAlgorithm.cpp)
+# list(APPEND SRCS src/SetOnSplayTree.cpp)
+# list(APPEND SRCS src/UkkonensAlgorithm.cpp)
 
 add_library(libalgo ${SRCS})
 add_library(malpunek::libalgo ALIAS libalgo)
