Redo structure for Set

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,3 +3,8 @@ add_executable(tree tree.cc)
 target_link_libraries(tree malpunek::libalgo)
 target_compile_options(tree PRIVATE -Werror -Wall)
 target_compile_features(tree PRIVATE cxx_std_17)
+
+add_executable(set set.cc)
+target_link_libraries(set malpunek::libalgo)
+target_compile_options(set PRIVATE -Werror -Wall)
+target_compile_features(set PRIVATE cxx_std_17)
