Change file naming convention

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(libalgo VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
 
-list(APPEND SRCS src/UkkonensAlgorithm.cpp)
+list(APPEND SRCS src/suffix_tree.cc)
 
 add_library(libalgo ${SRCS})
 add_library(malpunek::libalgo ALIAS libalgo)
