--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,22 +2,14 @@ cmake_minimum_required(VERSION 3.10)
 project(libalgo VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON) 
 
-list(APPEND SRCS src/suffix_tree.cc)
-
-add_library(libalgo ${SRCS})
+add_library(libalgo INTERFACE)
 add_library(malpunek::libalgo ALIAS libalgo)
 
-
 target_include_directories(libalgo
-    PUBLIC 
+    INTERFACE 
         $<INSTALL_INTERFACE:include>    
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
-
-target_compile_options(libalgo PRIVATE -Werror -Wall -Wpedantic $<$<CONFIG:DEBUG>:-O0>)
-target_compile_features(libalgo PRIVATE cxx_std_17)
 
 # TODO
 # add_subdirectory(tests)
