--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,3 +8,8 @@ add_executable(set set.cc)
 target_link_libraries(set malpunek::libalgo)
 target_compile_options(set PRIVATE -Werror -Wall)
 target_compile_features(set PRIVATE cxx_std_17)
+
+add_executable(suffix_tree suffix_tree.cc)
+target_link_libraries(suffix_tree malpunek::libalgo)
+target_compile_options(suffix_tree PRIVATE -Werror -Wall)
+target_compile_features(suffix_tree PRIVATE cxx_std_17)
